src/objects/tractHistory__c.object
<CustomObject>
    <description>Stores changes made to Tract Records.</description>
    <fields>
        <fullName>action__c</fullName>
        <description>Should be either Updated or Deleted.</description>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>changedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the User that made the change</description>
        <label>Changed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tract_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fieldLabel__c</fullName>
        <description>Stores the field Label at time of history item creation.</description>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fieldName__c</fullName>
        <description>Name of the field on the related Tract Record that was changed.</description>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newValue__c</fullName>
        <description>The value of the field after change</description>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldValue__c</fullName>
        <description>The value of the field before the change</description>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Tract record that was updated.</description>
        <label>Tract</label>
        <referenceTo>Tract__c</referenceTo>
        <relationshipLabel>Tract History Items</relationshipLabel>
        <relationshipName>tractHistoryItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tract History</label>
    <nameField>
        <label>Tract History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tract Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>